<resources>
    <string name="app_name">Ttwwi</string>
    <string name="app_small_letter_name">ttwwi</string>
    <!--  Common  -->
    <string name="common_sample_text">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <!--  SignUpActivity  -->
    <string name="introduce_desc1">안녕하세요, Ttwwi에</string>
    <string name="introduce_desc2">여러분들의 추억을 보관하세요!</string>
    <string name="start_button">시작하기</string>
    <string name="login_question">이미 계정이 있으신가요?</string>
    <string name="login_desc">로그인</string>
    <!--  SocialLogin  -->
    <string name="kakao_native_app_key">c5c754213bc47db0bf3dca88211b5fe3</string>
    <string name="kakao_key">kakaoc5c754213bc47db0bf3dca88211b5fe3</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="facebook_login">Facebook 로그인</string>
    <!--  AppIntroduceViewPager  -->
    <string name="illustration_introduce1">소중한 사람과의 추억을 한눈에1</string>
    <string name="illustration_introduce2">소중한 사람과의 추억을 한눈에2</string>
    <string name="illustration_introduce3">소중한 사람과의 추억을 한눈에3</string>
    <!--  SignUpCompleteActivity  -->
    <string name="signupcomplete_username">Default_User님,</string>
    <string name="signupcomplete_welcome_text">Ttwwi에 가입하신 것을 환영합니다!</string>
    <string name="signupcomplete_start_button">확인</string>
    <!--  MyPageActivity  -->
    <string name="mypage_welcome_text">님, 안녕하세요!</string>
    <string name="mypage_nofeed_notification">여러분의 추억을 남겨보세요!</string>
    <string name="mypage_profile_edit_photo_text">프로필 사진 변경하기</string>
    <string name="mypage_profile_edit_nickname_text">닉네임 변경하기</string>
    <!--  EditTripPageFragment  -->
    <string name="edittrippage_title_text">제목</string>
    <string name="edittrippage_title_input_hint">제목을 입력하세요.</string>
    <string name="edittrippage_subtitle_text">부제</string>
    <string name="edittrippage_subtitle_input_hint">부제목을 입력하세요.</string>
    <string name="edittrippage_password_text">비밀번호</string>
    <string name="edittrippage_password_input_hint">비밀번호를 입력하세요.</string>
    <string name="edittrippage_profile_photo_text">프로필 사진 등록</string>
    <string name="edittrippage_description_text">설명</string>
    <string name="edittrippage_description_input_hint">설명을 입력하세요.</string>
    <string name="edittrippage_sns_invite_text">소셜 로그인 친구초대</string>
    <string name="edittrippage_sns_kakao_invite_text">카카오톡</string>
    <string name="edittrippage_sns_instagram_invite_text">인스타그램</string>
    <string name="edittrippage_profile_photo_register_text">사진 등록하기</string>
    <string name="edittrippage_go_feed_button">여행하러 가기</string>
    <!--  TripFeedActivity  -->
    <string name="tripfeedpage_publisher_name">사용자 닉네임</string>
    <string name="tripfeedpage_like_text">좋아요</string>
    <string name="tripfeedpage_like_quantity_text">개</string>
    <string name="tripfeedpage_comment_hint_text">댓글 쓰기...</string>
    <!--  MakePostActivity  -->
    <string name="makepostpage_pagetitle_text">게시글 만들기</string>
    <string name="makepostpage_selectedphototitle_text">선택된 사진 목록</string>
    <string name="makepostpage_description_text">설명</string>
    <string name="makepostpage_makepost_button_text">게시글 등록하기</string>
    <string name="makepostpage_choose_multiphoto_text">여러 항목 선택</string>
    <string name="makepostpage_description_hint_text">설명을 입력하세요</string>
</resources>