<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/post_top_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/post_publisher_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/contributor1_small_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tripfeedpage_publisher_name"
                    android:textAppearance="@style/post_publisher_text" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <!--  삭제하기 Dialog 추가 할 예정  -->
            <ImageView
                android:id="@+id/post_etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_tripfeedpage_etc" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/post_photo_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_top_area">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/post_photos_viewpager"
                android:layout_width="match_parent"
                android:layout_height="360dp" />

            <!--        -->
            <!--        <ImageView-->
            <!--            android:src="@drawable/post_photo1"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"/>-->

            <ImageView
                android:src="@drawable/icon_save_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="356dp"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/post_communication_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_photo_area">

            <ImageView
                android:id="@+id/like_btn"
                android:src="@drawable/icon_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"/>

            <ImageView
                android:id="@+id/comment_btn"
                android:src="@drawable/icon_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"/>

            <ImageView
                android:id="@+id/share_btn"
                android:src="@drawable/icon_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/post_desc_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_communication_area">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/common_sample_text"
                android:textAppearance="@style/post_description_text"
                android:maxLines="3"
                android:ellipsize="end"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_desc_area"/>

        <LinearLayout
            android:id="@+id/post_comment_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_desc_area">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/tripfeedpage_like_text"
                android:textAppearance="@style/post_like_text" />

            <TextView
                android:id="@+id/post_like_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="@style/post_like_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tripfeedpage_like_quantity_text"
                android:textAppearance="@style/post_like_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_comment_area">

            <ImageView
                android:src="@drawable/contributor2_small_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/tripfeedpage_comment_profile_photo"/>

            <TextView
                android:id="@+id/comment_content"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tripfeedpage_comment_hint_text"
                android:textAppearance="@style/comment_hint_text"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>